--- a/Site/assets/sass/materialize.scss
+++ b/Site/assets/sass/materialize.scss
@@ -10,28 +10,28 @@
 // Reset
 @import "components/normalize";
 
-// components
+// Components
 @import "components/global";
 // @import "components/badges";
 @import "components/icons-material-design";
 @import "components/grid";
-// @import "components/navbar";
+@import "components/navbar";
 @import "components/typography";
 @import "components/transitions";
-// @import "components/cards";
+@import "components/cards";
 // @import "components/toast";
 // @import "components/tabs";
 // @import "components/tooltip";
 @import "components/buttons";
 @import "components/dropdown";
 @import "components/waves";
-// @import "components/modal";
+@import "components/modal";
 // @import "components/collapsible";
 // @import "components/chips";
 @import "components/materialbox";
 @import "components/forms/forms";
 // @import "components/table_of_contents";
-// @import "components/sidenav";
+@import "components/sidenav";
 // @import "components/preloader";
 // @import "components/slider";
 @import "components/carousel";
@@ -39,3 +39,7 @@
 // @import "components/pulse";
 // @import "components/datepicker";
 // @import "components/timepicker";
+
+// Personalizado
+
+@import "components/custom";
